Documentation edits made through Mintlify web editor

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -72,7 +72,7 @@ Add content directly in your files with MDX syntax and React components. You can
   icon="chart-mixed"
   href="/analytics/supported-integrations"
 >
-  Draw insights from user interactions with your documentation.
+  Draw insights from user interactions with your documentation.mmm
 </Card>
 
 <Card
